fix: sql lock database
