# garage_server/model/movie_actor.go
@@ -1,7 +1,8 @@
 package model
 
 type MovieActor struct {
-	Id      uint `json:"id"`
-	MovieId uint `json:"movie_id"`
-	ActorId uint `json:"actor_id"`
+	Id        uint    `json:"id"`
+	MovieId   uint    `json:"movie_id"`
+	ActorId   uint    `json:"actor_id"`
+	ActorName *string `json:"actor_name"`
 }
